Fix z-index of header

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,7 @@ button:focus svg {
 /* <-- Navbar --> */
 header {
     position: fixed;
+    z-index: 100000;
 }
 
 #menu {
